--- a/FYProject1/FYProject1.csproj
+++ b/FYProject1/FYProject1.csproj
@@ -288,6 +288,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\myscript.js" />
     <Content Include="Scripts\sorttable.js" />
+    <Content Include="Views\RecoveryEmail\email.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -368,6 +369,8 @@
     <Content Include="Views\Location\DeleteCity.cshtml" />
     <Content Include="Views\Cart\ViewCart.cshtml" />
     <Content Include="Views\User\UserGuestUpdate.cshtml" />
+    <Content Include="Views\Cart\Checkout.cshtml" />
+    <Content Include="Views\Cart\ConfirmOrder.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
