--- a/FYProject1/FYProject1.csproj
+++ b/FYProject1/FYProject1.csproj
@@ -184,6 +184,7 @@
     <Content Include="Content\themes\base\tabs.css" />
     <Content Include="Content\themes\base\theme.css" />
     <Content Include="Content\themes\base\tooltip.css" />
+    <Content Include="ImagesData\favicon.gif" />
     <Content Include="Scripts\BannerPreview.js" />
     <Content Include="Scripts\bootstrap-magnify.js" />
     <Content Include="Scripts\bundle.js" />
@@ -261,6 +262,7 @@
     <Content Include="font-awesome-4.7.0\scss\_screen-reader.scss" />
     <Content Include="font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="font-awesome-4.7.0\scss\_variables.scss" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\ImagePreview.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
