🎨 Update: Beautify Markup

--- a/FYProject1/FYProject1.csproj
+++ b/FYProject1/FYProject1.csproj
@@ -142,6 +142,7 @@
     <Content Include="Content\datagridstyles.css" />
     <Content Include="Content\datatables.min.css" />
     <Content Include="Content\editor.css" />
+    <Content Include="Content\justlazy.css" />
     <Content Include="Content\orderTrack.css" />
     <Content Include="Content\orderTrack.jpg" />
     <Content Include="Content\themes\base\accordion.css" />
@@ -188,10 +189,6 @@
     <Content Include="Content\roar.min.css" />
     <Content Include="ImagesData\favicon.gif" />
     <Content Include="ImagesData\favicon.png" />
-    <Content Include="Scripts\BannerPreview.js" />
-    <Content Include="Scripts\bootstrap-magnify.js" />
-    <Content Include="Scripts\datatables.min.js" />
-    <Content Include="Scripts\editor.js" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\jquery-ui.min.css" />
     <Content Include="Content\linkedin.png" />
@@ -220,10 +217,6 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
-    <Content Include="Scripts\ai.0.22.19-build00125.js" />
-    <Content Include="Scripts\ai.0.22.19-build00125.min.js" />
-    <Content Include="Scripts\bjqs-1.3.js" />
-    <Content Include="Scripts\bjqs-1.3.min.js" />
     <Content Include="bootstrap\config.json" />
     <Content Include="bootstrap\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="bootstrap\fonts\glyphicons-halflings-regular.ttf" />
@@ -263,37 +256,23 @@
     <Content Include="font-awesome-4.7.0\scss\_stacked.scss" />
     <Content Include="font-awesome-4.7.0\scss\_variables.scss" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
-    <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\bootstrap-magnify.js" />
+    <Content Include="Scripts\datatables.min.js" />
     <Content Include="Scripts\ImagePreview.js" />
-    <Content Include="Scripts\jquery-1.10.2.js" />
-    <Content Include="Scripts\jquery-1.10.2.min.js" />
-    <Content Include="Scripts\jquery-1.9.1.min.map" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
+    <Content Include="Scripts\justlazy.min.js" />
+    <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\myscript.js" />
+    <Content Include="Scripts\notificon.js" />
+    <Content Include="Scripts\BannerPreview.js" />
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
-    <None Include="Scripts\jquery-1.9.1.intellisense.js" />
-    <Content Include="Scripts\jquery-1.9.1.js" />
-    <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jquery-2.2.3.min.js" />
-    <None Include="Scripts\jquery-3.2.1.intellisense.js" />
-    <Content Include="Scripts\jquery-3.2.1.js" />
-    <Content Include="Scripts\jquery-3.2.1.min.js" />
-    <Content Include="Scripts\jquery-3.2.1.slim.js" />
-    <Content Include="Scripts\jquery-3.2.1.slim.min.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.js" />
     <Content Include="Scripts\jquery-ui-1.12.1.min.js" />
     <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery-ui.min.js" />
-    <Content Include="Scripts\jquery-3.2.1.min.map" />
-    <Content Include="Scripts\jquery-3.2.1.slim.min.map" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\myscript.js" />
-    <Content Include="Scripts\notificon.js" />
     <Content Include="Scripts\roar.min.js" />
-    <Content Include="Scripts\sorttable.js" />
     <Content Include="Views\Cart\orderemail.html" />
     <Content Include="Views\RecoveryEmail\email.html" />
     <Content Include="Web.config">
@@ -341,8 +320,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Scripts\jquery-2.2.3.min.map" />
     <Content Include="Views\Shared\_MainLayout.cshtml" />
     <Content Include="Views\Admin\AdminPanel.cshtml" />
     <Content Include="Views\Shared\_AdminLayout.cshtml" />
@@ -379,6 +356,7 @@
     <Content Include="Views\Cart\Checkout.cshtml" />
     <Content Include="Views\Cart\ConfirmOrder.cshtml" />
     <Content Include="Views\Cart\PlaceOrder.cshtml" />
+    <Content Include="Scripts\jquery-2.2.3.min.map" />
     <None Include="Views\Cart\email.cshtml" />
     <Content Include="Views\Home\OrderTrack.cshtml" />
     <None Include="Web.Debug.config">
