👌✨ Update: Stock add and Edit feature

--- a/FYProject1Classes/FYProject1Classes.csproj
+++ b/FYProject1Classes/FYProject1Classes.csproj
@@ -69,6 +69,10 @@
     <Compile Include="Migrations\201808021600595_stockPropAdded.Designer.cs">
       <DependentUpon>201808021600595_stockPropAdded.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808161012247_UpdateStockinCamera.cs" />
+    <Compile Include="Migrations\201808161012247_UpdateStockinCamera.Designer.cs">
+      <DependentUpon>201808161012247_UpdateStockinCamera.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ProductMgmt\Brand.cs" />
     <Compile Include="ProductMgmt\Camera.cs" />
@@ -105,6 +109,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808021600595_stockPropAdded.resx">
       <DependentUpon>201808021600595_stockPropAdded.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808161012247_UpdateStockinCamera.resx">
+      <DependentUpon>201808161012247_UpdateStockinCamera.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
