🛠👷‍♂️ Add: IDisposable Methods on Classes

--- a/FYProject1Classes/FYProject1Classes.csproj
+++ b/FYProject1Classes/FYProject1Classes.csproj
@@ -73,6 +73,10 @@
     <Compile Include="Migrations\201808161012247_UpdateStockinCamera.Designer.cs">
       <DependentUpon>201808161012247_UpdateStockinCamera.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201808181258324_UpdateOrderEntity.cs" />
+    <Compile Include="Migrations\201808181258324_UpdateOrderEntity.Designer.cs">
+      <DependentUpon>201808181258324_UpdateOrderEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ProductMgmt\Brand.cs" />
     <Compile Include="ProductMgmt\Camera.cs" />
@@ -112,6 +116,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201808161012247_UpdateStockinCamera.resx">
       <DependentUpon>201808161012247_UpdateStockinCamera.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201808181258324_UpdateOrderEntity.resx">
+      <DependentUpon>201808181258324_UpdateOrderEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
