♻🔑✔ Update: Anonymus Credentials
Remove my email ID and Password.

--- a/FYProject1/Web.config
+++ b/FYProject1/Web.config
@@ -11,8 +11,8 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <system.net>
     <mailSettings>
-      <smtp from="lk2712.svcs@gmail.com">
-        <network host="smtp.gmail.com" port="587" userName="lk2712.svcs@gmail.com" password="lkstudio" enableSsl="true" defaultCredentials="false"/>
+      <smtp from="ADD_YOUR_OWN">
+        <network host="smtp.gmail.com" port="587" userName="ADD_YOUR_OWN" password="ADD_YOUR_OWN" enableSsl="true" defaultCredentials="false"/>
       </smtp>
     </mailSettings>
   </system.net>
